chore: remove preview features